--- a/matlab-exercises-emaip.tex
+++ b/matlab-exercises-emaip.tex
@@ -10,6 +10,8 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{todonotes}
+\usepackage{fancyvrb}
+\usepackage{xparse}
 \usepackage{listings}
 \usepackage{color}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
@@ -60,6 +62,12 @@
 
 \Opensolutionfile{ans}[ans]
 \Opensolutionfile{hnt}[hints]
+
+
+\NewDocumentEnvironment{solutionfile}{O{}}
+  {\VerbatimOut{exercises/exercise_\theex#1.m}}
+  {\endVerbatimOut}
+
 
 \author{Henrik Skov Midtiby}
 \title{Matlab exercises for E-MAIP 2019}
@@ -301,6 +309,17 @@ figure(1);
 plot(x, y);
 \end{lstlisting}
 \end{sol}
+\begin{solutionfile}[plot]
+% Create evenly distributed x values that covers the range
+x = linspace(-3, 3, 100);
+
+% Calculate the associated y value
+y = 1 ./ (1.1 + sin(4*x));
+
+% Open a figure and plot the associated x and y values
+figure(1);
+plot(x, y);
+\end{solutionfile}
 \end{ex}
 
 
