--- a/functionsAndRecap.tex
+++ b/functionsAndRecap.tex
@@ -509,6 +509,7 @@ end
 
 \pagebreak[4]
 \subsection{Multiple plots in one}
+\label{ssecMultiplePlotsInOne}
 
 It is possible to put multiple plots 
 next to each other in a single plot in matlab.
