--- a/matlabIntroduction.tex
+++ b/matlabIntroduction.tex
@@ -376,7 +376,7 @@ plot(x_min, fh(x_min), 'o');
 \subsection{Plotting inverse functions}
 
 \begin{ex}
-Plot the function $f(x) = \sin(x)$ on the interval $x \in [-pi/2, pi/2]$
+Plot the function $f(x) = \sin(x)$ on the interval $x \in [-\pi/2, \pi/2]$
 and determine whether the function has an inverse.
 The template below might be helpful.
 \begin{lstlisting}
